--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,19 @@
     <string name="tidak_puasa">Tidak Puasa</string>
     <string name="footer_note">Data tersimpan otomatis untuk setiap hari Ramadhan.</string>
     <string name="about_text">About: Apk MU version by hanyajasa.com - hanyajasa@gmail.com - Palangka Raya 2026</string>
+    <string name="app_version_label">Versi Aplikasi: %1$s</string>
+    <string name="check_update">Cek Update</string>
+    <string name="update_status_idle">Status update: belum dicek</string>
+    <string name="update_status_checking">Status update: mengecek versi terbaru...</string>
+    <string name="update_status_latest">Status update: aplikasi sudah versi terbaru</string>
+    <string name="update_status_available">Status update: versi terbaru tersedia (%1$s)</string>
+    <string name="update_status_downloading">Status update: mengunduh APK terbaru...</string>
+    <string name="update_status_downloaded">Status update: unduhan selesai, siap instal</string>
+    <string name="update_status_failed">Status update: gagal cek update</string>
+    <string name="update_dialog_title">Update Tersedia</string>
+    <string name="update_dialog_message">Versi baru tersedia (%1$s). Unduh sekarang?</string>
+    <string name="update_yes">Ya, unduh</string>
+    <string name="update_no">Nanti</string>
     <string name="summary_format">Progress hari ini: %1$d/5 sholat, status puasa: %2$s.</string>
     <string name="score_format">Skor Hari Ini: %1$d</string>
     <string name="status_puasa">Puasa</string>
