--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Aplikasi Giat Ramadhan</string>
+    <string name="app_name">Giat Ramadhan 2026</string>
     <string name="title_giat">Giat Ramadhan 1447 H</string>
     <string name="subtitle_giat">Checklist harian ibadah agar Ramadhan lebih seru dan terpantau.</string>
     <string name="label_hari">Pilih Tanggal Ramadhan</string>
