--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,11 @@
     <string name="puasa">Puasa</string>
     <string name="tidak_puasa">Tidak Puasa</string>
     <string name="footer_note">Data tersimpan otomatis untuk setiap hari Ramadhan.</string>
-    <string name="about_text">About: Apk MU version by hanyajasa.com - hanyajasa@gmail.com - Palangka Raya 2026</string>
+    <string name="button_about">About</string>
+    <string name="about_dialog_title">About</string>
+    <string name="about_dialog_message">About: Apk MU version [%1$s] by hanyajasa.com - hanyajasa@gmail.com - Palangka Raya 2026</string>
+    <string name="donasi_title">Jika ingin donasi pengembangan aplikasi ini, silakan scan QRIS atau transfer ke rekening berikut:</string>
+    <string name="donasi_rekening">BSI : 9692999170\nBCA : 8600432053\nBRI : 4543-01-020754-53-0\nMandiri : 159-00-0068323-4\nMuamalat : 6310042068\nDana : 082254205110\nJenius : 90110062490\nJago : 101396991206\nSeabank : 901899706783</string>
     <string name="app_version_label">Versi Aplikasi: %1$s</string>
     <string name="check_update">Cek Update</string>
     <string name="update_status_idle">Status update: belum dicek</string>
