--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,11 @@
     <string name="title_giat">Giat Ramadhan 1447 H</string>
     <string name="subtitle_giat">Checklist harian ibadah agar Ramadhan lebih seru dan terpantau.</string>
     <string name="label_hari">Pilih Tanggal Ramadhan</string>
-    <string name="default_summary">Progress hari ini: 0/5 sholat, status puasa belum dipilih.</string>
+    <string name="default_summary">Progress hari ini: 0/7 sholat, status puasa belum dipilih, tadarus belum.</string>
     <string name="default_score">Skor Hari Ini: 0</string>
     <string name="default_achievement">Badge: Belum ada</string>
     <string name="default_streak">Streak sempurna: 0 hari berturut-turut</string>
-    <string name="label_sholat">Checklist Sholat 5 Waktu</string>
+    <string name="label_sholat">Checklist Sholat Harian</string>
     <string name="label_puasa">Status Puasa</string>
     <string name="label_waktu_sholat">Waktu Sholat Hari Ini</string>
     <string name="waktu_template">%1$s: %2$s</string>
@@ -20,7 +20,7 @@
     <string name="label_catatan">Catatan Tadarus / Mengaji</string>
     <string name="hint_catatan">Contoh: 1 Ramadhan sudah membaca Al Baqarah ayat 255</string>
     <string name="label_grafik">Grafik Kinerja Ramadhan</string>
-    <string name="label_grafik_desc">Garis hijau: sholat. Garis oranye: puasa.</string>
+    <string name="label_grafik_desc">Garis hijau: sholat. Garis oranye: puasa. Garis biru: tadarus.</string>
     <string name="label_heatmap">Kalender Heatmap Ramadhan</string>
     <string name="label_heatmap_desc">Warna makin kuat berarti skor harian makin tinggi.</string>
     <string name="subuh">Subuh</string>
@@ -28,6 +28,8 @@
     <string name="ashar">Ashar</string>
     <string name="maghrib">Maghrib</string>
     <string name="isya">Isya</string>
+    <string name="tarawih">Tarawih</string>
+    <string name="witir">Witir</string>
     <string name="puasa">Puasa</string>
     <string name="tidak_puasa">Tidak Puasa</string>
     <string name="footer_note">Data tersimpan otomatis untuk setiap hari Ramadhan.</string>
@@ -42,8 +44,8 @@
     <string name="masukan_status_berhasil">Status masukan: berhasil dikirim</string>
     <string name="masukan_status_gagal">Status masukan: gagal dikirim</string>
     <string name="about_dialog_title">About</string>
-    <string name="about_dialog_message">About: Apk MU version [%1$s] by hanyajasa.com - hanyajasa@gmail.com - Palangka Raya 2026</string>
-    <string name="donasi_title">Jika ingin donasi pengembangan aplikasi ini, silakan scan QRIS atau transfer ke rekening berikut:</string>
+    <string name="about_dialog_message">Apk MU version [%1$s] by hanyajasa.com - hanyajasa@gmail.com - Palangka Raya 2026</string>
+    <string name="donasi_title">Jika ingin donasi pengembangan aplikasi ini, atau merasa aplikasi ini bermanfaat, silakan scan QRIS atau transfer ke rekening berikut:</string>
     <string name="donasi_rekening">BSI : 9692999170\nBCA : 8600432053\nBRI : 4543-01-020754-53-0\nMandiri : 159-00-0068323-4\nMuamalat : 6310042068\nDana : 082254205110\nJenius : 90110062490\nJago : 101396991206\nSeabank : 901899706783</string>
     <string name="app_version_label">Versi Aplikasi: %1$s</string>
     <string name="check_update">Cek Update</string>
@@ -58,13 +60,16 @@
     <string name="update_dialog_message">Versi baru tersedia (%1$s). Unduh sekarang?</string>
     <string name="update_yes">Ya, unduh</string>
     <string name="update_no">Nanti</string>
-    <string name="summary_format">Progress hari ini: %1$d/5 sholat, status puasa: %2$s.</string>
+    <string name="summary_format">Progress hari ini: %1$d/7 sholat, status puasa: %2$s.</string>
     <string name="score_format">Skor Hari Ini: %1$d</string>
     <string name="status_puasa">Puasa</string>
     <string name="status_tidak_puasa">Tidak Puasa</string>
     <string name="status_belum">Belum dipilih</string>
+    <string name="status_tadarus_done">Sudah</string>
+    <string name="status_tadarus_not_done">Belum</string>
     <string name="legend_sholat">Sholat</string>
     <string name="legend_puasa">Puasa</string>
+    <string name="legend_tadarus">Tadarus</string>
     <string name="streak_format">Streak sempurna: %1$d hari berturut-turut</string>
     <string name="badge_belum">Belum Ada Badge</string>
     <string name="badge_pemula">Pemula Konsisten (3 Hari)</string>
@@ -72,4 +77,6 @@
     <string name="badge_hebat">Hebat (14 Hari)</string>
     <string name="badge_juara">Juara Ramadhan (30 Hari)</string>
     <string name="achievement_format">Badge: %1$s</string>
+    <string name="label_tadarus_check">Tadarus / Mengaji selesai hari ini</string>
+    <string name="summary_format_with_tadarus">Progress hari ini: %1$d/7 sholat, status puasa: %2$s, tadarus: %3$s.</string>
 </resources>
