--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="masukan_status_berhasil">Status masukan: berhasil dikirim</string>
     <string name="masukan_status_gagal">Status masukan: gagal dikirim</string>
     <string name="about_dialog_title">About</string>
-    <string name="about_dialog_message">Apk MU version [%1$s] by hanyajasa.com - hanyajasa@gmail.com - Palangka Raya 2026</string>
+    <string name="about_dialog_message">Aplikasi Kegiatan Ramadhan untuk mencatat kegiatan-kegiatan yang telah dilakukan selama bulan Ramadhan, MU version [%1$s]. By hanyajasa.com - hanyajasa@gmail.com - Palangka Raya 2026</string>
     <string name="donasi_title">Jika ingin donasi pengembangan aplikasi ini, atau merasa aplikasi ini bermanfaat, silakan scan QRIS atau transfer ke rekening berikut:</string>
     <string name="donasi_rekening">BSI : 9692999170\nBCA : 8600432053\nBRI : 4543-01-020754-53-0\nMandiri : 159-00-0068323-4\nMuamalat : 6310042068\nDana : 082254205110\nJenius : 90110062490\nJago : 101396991206\nSeabank : 901899706783</string>
     <string name="app_version_label">Versi Aplikasi: %1$s</string>
