Commit 16 - 2 mode kalender

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,18 @@
     <string name="title_giat">Giat Ramadhan 1447 H</string>
     <string name="subtitle_giat">Checklist harian ibadah agar Ramadhan lebih seru dan terpantau.</string>
     <string name="label_hari">Pilih Tanggal Ramadhan</string>
+    <string name="calendar_dialog_title">Pilih Sumber Kalender Ramadhan</string>
+    <string name="calendar_dialog_message">Pilih kalender yang ingin digunakan saat ini. Pilihan ini digunakan untuk memuat jadwal sholat Ramadhan.</string>
+    <string name="calendar_option_khgt">Kalender Muhammadiyah KHGT (Kalender Hijriah Global Tunggal)</string>
+    <string name="calendar_option_kemenag">Kalender Kementerian Agama Republik Indonesia</string>
+    <string name="calendar_dialog_use">Gunakan</string>
     <string name="default_summary">Progress hari ini: 0/7 sholat, status puasa belum dipilih, tadarus belum.</string>
     <string name="default_score">Skor Hari Ini: 0</string>
     <string name="default_achievement">Badge: Belum ada</string>
     <string name="default_streak">Streak sempurna: 0 hari berturut-turut</string>
     <string name="label_sholat">Checklist Sholat Harian</string>
     <string name="label_puasa">Status Puasa</string>
+    <string name="label_alasan_tidak_puasa">Alasan tidak puasa (opsional)</string>
     <string name="label_waktu_sholat">Waktu Sholat Hari Ini</string>
     <string name="waktu_template">%1$s: %2$s</string>
     <string name="label_imsak">Imsak</string>
@@ -32,9 +38,13 @@
     <string name="witir">Witir</string>
     <string name="puasa">Puasa</string>
     <string name="tidak_puasa">Tidak Puasa</string>
+    <string name="alasan_sakit">Sakit</string>
+    <string name="alasan_safar">Safar</string>
+    <string name="alasan_haid">Haid</string>
     <string name="footer_note">Data tersimpan otomatis untuk setiap hari Ramadhan.</string>
     <string name="button_about">About</string>
     <string name="button_masukan_saran">Masukan &amp; Saran</string>
+    <string name="button_change_calendar">Ubah Kalender</string>
     <string name="masukan_dialog_title">Masukan dan Saran</string>
     <string name="masukan_dialog_hint">Tulis masukan atau saran Anda</string>
     <string name="masukan_kirim">Kirim</string>
@@ -64,6 +74,7 @@
     <string name="score_format">Skor Hari Ini: %1$d</string>
     <string name="status_puasa">Puasa</string>
     <string name="status_tidak_puasa">Tidak Puasa</string>
+    <string name="status_tidak_puasa_dengan_alasan">Tidak Puasa (%1$s)</string>
     <string name="status_belum">Belum dipilih</string>
     <string name="status_tadarus_done">Sudah</string>
     <string name="status_tadarus_not_done">Belum</string>
