Commit 19 - Penambahan bagikan emblem pencapaian, sholat Magrib di posisi paling atas sesuai kalender qomariyah

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="footer_note">Data tersimpan otomatis untuk setiap hari Ramadhan.</string>
     <string name="button_about">About</string>
     <string name="button_masukan_saran">Masukan &amp; Saran</string>
+    <string name="button_share_emblem">Bagikan Emblem Pencapaian</string>
     <string name="button_change_calendar">Ubah Kalender</string>
     <string name="masukan_dialog_title">Masukan dan Saran</string>
     <string name="masukan_dialog_hint">Tulis masukan atau saran Anda</string>
@@ -84,6 +85,23 @@
     <string name="legend_puasa">Puasa</string>
     <string name="legend_tadarus">Tadarus</string>
     <string name="streak_format">Streak sempurna: %1$d hari berturut-turut</string>
+    <string name="share_emblem_title">Bagikan Emblem</string>
+    <string name="share_emblem_caption">Alhamdulillah, akumulasi skor Ramadhan saya: %1$d/3000. Streak sempurna terbaik: %2$d hari. Badge: %3$s.</string>
+    <string name="share_emblem_failed">Gagal membuat emblem untuk dibagikan.</string>
+    <string name="emblem_heading">EMBLEM GIAT RAMADHAN</string>
+    <string name="emblem_subheading">Pencapaian Ibadah Ramadhan 1447 H</string>
+    <string name="emblem_total_score_label">Akumulasi Skor</string>
+    <string name="emblem_best_streak_label">Streak Terbaik</string>
+    <string name="emblem_badge_label">Badge</string>
+    <string name="emblem_footer">Dibuat dari aplikasi Giat Ramadhan 2026</string>
+    <string name="high_score_overlay_title">Badge Skor Tinggi</string>
+    <string name="high_score_overlay_subtitle">Skor hari ini %1$d</string>
+    <string name="badge_visual_desc">Ikon Badge</string>
+    <string name="badge_star_level_0">Bintang: -</string>
+    <string name="badge_star_level_1">Bintang: *</string>
+    <string name="badge_star_level_2">Bintang: * *</string>
+    <string name="badge_star_level_3">Bintang: * * *</string>
+    <string name="badge_star_level_4">Bintang: * * * *</string>
     <string name="badge_belum">Belum Ada Badge</string>
     <string name="badge_pemula">Pemula Konsisten (3 Hari)</string>
     <string name="badge_terlatih">Terlatih (7 Hari)</string>
